updating array as list